--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ scikit-image==0.19.1
 termcolor
 tqdm==4.62.3
 loguru==0.5.3
-trimesh==3.9.35
+trimesh>=3.17.1
 flatten_dict==0.4.2
 ipykernel==5.3.4
 ipywidgets==7.6.5
@@ -31,7 +31,9 @@ protobuf==3.20.0
 open3d
 dataclasses>=0.6
 numpy==1.22.4
-git+https://github.com/facebookresearch/pytorch3d.git@stable
+torch==1.13.0 
+torchvision
+git+https://github.com/facebookresearch/pytorch3d.git@v0.7.1
 git+https://github.com/YuliangXiu/neural_voxelization_layer.git
 git+https://github.com/NVIDIAGameWorks/kaolin.git
 git+https://github.com/YuliangXiu/rembg.git
